--- a/popup.html
+++ b/popup.html
@@ -3,11 +3,11 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
     <div id="main"></div>
-    <script src="jquery-2.1.1.min.js"></script>
-    <script src="popup.js"></script>
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="js/popup.js"></script>
 </body>
 </html>
