--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-    <div id="main"></div>
+    <div id="hi-todo-popup-main"></div>
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/popup.js"></script>
 </body>
